@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-13T08:07:29Z",
+  "timestamp" : "2024-01-14T08:07:30Z",
   "count_outdated" : 216,
   "uniques_outdated" : 152,
-  "count" : 225,
-  "uniques" : 160,
+  "count" : 226,
+  "uniques" : 161,
   "clones" : [
     {
       "timestamp": "2023-12-31T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-01-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
