@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 8,
+  "count": 10,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2023-12-31T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2024-01-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-14T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
