@@ -1,3 +1,12 @@
+2024-01-14T08:07:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7517907963 # 22
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
+* notice: last 14d: unq all: 9 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 152 216 / 160 225
+* notice: next accum: outdated-unq outdated-all / unq all: 152 216 / 161 226
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-14]
+
 2024-01-13T08:07:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7511243712 # 19
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
